# modern-pic-verstailepb

./: .justfile  CMakeLists.txt  Readme  compile_flags.txt
app/: CMakeLists.txt  main.c
driver/: CMakeLists.txt  uart.c
include/: stddef.h  types.h  uart.h
include/asm/: int-ll64.h  linkage.h
scripts/: addbss.py  arm-none-eabi.cmake  pie.ld  toolchaindeploy.py
startup/: CMakeLists.txt  startup.S
